<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
>

<LinearLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical" >
  

  <TextView android:text="@string/fullinfo_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" 
  />
  <TextView android:id="@+id/fullinfo_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  
  <TextView android:text="@string/fullinfo_tid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip" 
  />
  <TextView android:id="@+id/fullinfo_tid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  
  <TextView android:text="@string/fullinfo_aid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_aid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  
  <TextView android:text="@string/fullinfo_an"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_an"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <LinearLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="3dip"
  >
    <TextView android:text="@string/fullinfo_cash"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textStyle="bold"
    />
    <TextView android:id="@+id/fullinfo_cash"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" 
    />
</LinearLayout>
<LinearLayout android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="3dip"
  >
  <TextView android:text="@string/fullinfo_bonds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</LinearLayout>
  <TextView android:text="@string/fullinfo_last_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_last_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <TextView android:text="@string/fullinfo_last_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_last_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
 <LinearLayout android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="3dip"
 >
  <TextView android:text="@string/fullinfo_signal_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_signal_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</LinearLayout>
<LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dip"
>
  <TextView android:text="@string/fullinfo_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</LinearLayout>
  <TextView android:text="@string/fullinfo_soft_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_soft_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />

  <TextView android:text="@string/fullinfo_printer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_printer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
  
  <TextView android:text="@string/fullinfo_cashbin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="3dip"
  />
  <TextView android:id="@+id/fullinfo_cashbin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
<TableLayout android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dip"
>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />  
  <TextView android:id="@+id/fullinfo_bonds10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
 <TextView android:text="@string/fullinfo_bonds500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
<TableRow>
  <TextView android:text="@string/fullinfo_bonds5000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_bonds5000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</TableRow>
</TableLayout>
<LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dip"
>
  <TextView android:text="@string/fullinfo_pays_per_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dip"
  />
  <TextView android:id="@+id/fullinfo_pays_per_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
  />
</LinearLayout>
</LinearLayout>
</ScrollView>